--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,8 @@ jobs:
     - name: Build and Push Docker Image
       uses: mr-smithers-excellent/docker-build-push@v6
       with:
-        context: .
-        push: true
-        tags: suyuying/fastapi-backend:v1
+        image: ghcr.io/suyuying/fastapi-backend
+        tags: v1
+        username: ${{ secrets.GHCR_USERNAME }}
+        password: ${{ secrets.GHCR_TOKEN }}
         platform: linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v6
