--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,7 @@ jobs:
       run: 
         python -m pip install --upgrade pip
         pip install --no-cache-dir --upgrade -r requirment.txt
+        echo ${{ secrets.GHCR_TOKEN }}
     - name: Login to GitHub Container Registry
       uses: docker/login-action@v2
       with:
@@ -32,4 +33,3 @@ jobs:
         tags: v1
         username: ${{ secrets.GHCR_USERNAME }}
         password: ${{ secrets.GHCR_TOKEN }}
-        platform: linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v6
