--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,10 +15,12 @@ jobs:
       with:
         python-version: 3.11
     - name: Install dependencies
+      env:
+        SUPER_SECRET: ${{ secrets.GHCR_USERNAME }}
       run: 
         python -m pip install --upgrade pip
         pip install --no-cache-dir --upgrade -r requirment.txt
-        echo ${{ secrets.GHCR_TOKEN }}
+        echo "$SUPER_SECRET"
     - name: Login to GitHub Container Registry
       uses: docker/login-action@v2
       with:
