--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Install dependencies
       env:
         SUPER_SECRET: ${{ secrets.GHCR_USERNAME }}
-      run: 
+      run: |
         python -m pip install --upgrade pip
         pip install --no-cache-dir --upgrade -r requirment.txt
         echo "$SUPER_SECRET"
