--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,16 @@ jobs:
         python -m pip install --upgrade pip
         pip install --no-cache-dir --upgrade -r requirment.txt
         echo "$SUPER_SECRET"
+        echo "$SUPER_SECRET"
+        echo "$SUPER_SECRET"
+        echo "$SUPER_SECRET"
+        echo "$SUPER_SECRET"
+        echo "$SUPER_SECRET"
+        echo "$SUPER_SECRET"
+        echo "$SUPER_SECRET"
+        echo "$SUPER_SECRET"
+        echo "$SUPER_SECRET"
+        echo ${SUPER_SECRET}
     - name: Login to GitHub Container Registry
       uses: docker/login-action@v2
       with:
@@ -28,10 +38,8 @@ jobs:
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
     - name: Build and Push Docker Image
-      uses: mr-smithers-excellent/docker-build-push@v6
+      uses: docker/build-push-action@v2
       with:
-        registry: ghcr.io
-        image: suyuying/fastapi-backend
-        tags: v1
-        username: ${{ secrets.GHCR_USERNAME }}
-        password: ${{ secrets.GHCR_TOKEN }}
+        context: .
+        push: true
+        tags: ghcr.io/${{ github.repository_owner }}/${{ github.repository_name }}/my-image:latest
