--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,26 +20,22 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install --no-cache-dir --upgrade -r requirment.txt
-        echo "$SUPER_SECRET"
-        echo "$SUPER_SECRET"
-        echo "$SUPER_SECRET"
-        echo "$SUPER_SECRET"
-        echo "$SUPER_SECRET"
-        echo "$SUPER_SECRET"
-        echo "$SUPER_SECRET"
-        echo "$SUPER_SECRET"
-        echo "$SUPER_SECRET"
-        echo "$SUPER_SECRET"
-        echo ${SUPER_SECRET}
+
     - name: Login to GitHub Container Registry
       uses: docker/login-action@v2
       with:
         registry: ghcr.io
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
+    - name: run push
+
+      run: |
+        docker push ghcr.io/suyuying/fastapi-backend:1.0
     - name: Build and Push Docker Image
-      uses: docker/build-push-action@v2
+      uses: mr-smithers-excellent/docker-build-push@v6
       with:
-        context: .
-        push: true
-        tags: ghcr.io/${{ github.repository_owner }}/${{ github.repository_name }}/my-image:latest
+        registry: ghcr.io
+        image: suyuying/fastapi-backend
+        tags: v1
+        username: ${{ secrets.GHCR_USERNAME }}
+        password: ${{ secrets.GHCR_TOKEN }}
