--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,12 +14,6 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: 3.11
-    - name: Install dependencies
-      env:
-        SUPER_SECRET: ${{ secrets.GHCR_USERNAME }}
-      run: |
-        python -m pip install --upgrade pip
-        pip install --no-cache-dir --upgrade -r requirment.txt
 
     - name: Login to GitHub Container Registry
       uses: docker/login-action@v2
@@ -28,8 +22,8 @@ jobs:
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
     - name: run push
-
       run: |
+        docker build -t ghcr.io/suyuying/fastapi-backend:1.0 .
         docker push ghcr.io/suyuying/fastapi-backend:1.0
     - name: Build and Push Docker Image
       uses: mr-smithers-excellent/docker-build-push@v6
