--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,15 +21,6 @@ jobs:
         registry: ghcr.io
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
-    - name: run push
+    - name: Use variables
       run: |
-        docker build -t ghcr.io/suyuying/fastapi-backend:1.0 .
-        docker push ghcr.io/suyuying/fastapi-backend:1.0
-    - name: Build and Push Docker Image
-      uses: mr-smithers-excellent/docker-build-push@v6
-      with:
-        registry: ghcr.io
-        image: suyuying/fastapi-backend
-        tags: v1
-        username: ${{ secrets.GHCR_USERNAME }}
-        password: ${{ secrets.GHCR_TOKEN }}
+        echo "repository variable : ${{ vars.HELLO }}"
