--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,7 @@ on:
 jobs:
   build-and-push-image:
     runs-on: ubuntu-latest
+    environment: ford
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
