--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,3 +25,14 @@ jobs:
     - name: Use variables
       run: |
         echo "repository variable : ${{ vars.HELLO }}"
+    - name : build and push
+      run: |
+        docker build -t ghcr.io/suyuying/fastapi-backend:1.0 .
+        docker push ghcr.io/suyuying/fastapi-backend:1.0
+        docker ps
+    - name: Build and Push Docker Image
+      uses: docker/build-push-action@v2
+      with:
+        context: .
+        push: true
+        tags: ghcr.io/${{ github.repository_owner }}/${{ github.repository_name }}/my-image:latest
