--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
         echo "repository variable : ${{ vars.HELLO }}"
     - uses: mr-smithers-excellent/docker-build-push@v6
       with:
-        image: ghcr.io/suyuying/fastapi-backend:1.1
+        image: suyuying/fastapi-backend:1.1
         registry: ghcr.io
         username: ${{ secrets.GHCR_USERNAME }}
         password: ${{ secrets.GHCR_TOKEN }}
