--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,9 +25,5 @@ jobs:
     - name: Use variables
       run: |
         echo "repository variable : ${{ vars.HELLO }}"
-    - uses: mr-smithers-excellent/docker-build-push@v6
-      with:
-        image: suyuying/fastapi-backend:1.1
-        registry: ghcr.io
-        username: ${{ secrets.GHCR_USERNAME }}
-        password: ${{ secrets.GHCR_TOKEN }}
+        docker pull ghcr.io/suyuying/fastapi-backend:1.0
+
