--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,8 +26,12 @@ jobs:
       packages: write
     
     steps:
-      - name: Checkout repository
-        run : echo "$GHCR_TOKEN"
+      - name: READ vaialbe test
+        run : | 
+          echo "$read_my_name"
+          echo "$READ_MY_NAME"
+          echo ${{ READ_MY_NAME }}
+          echo ${{ read_my_name }}
       - name: Checkout repository
         uses: actions/checkout@v3
 
