--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,10 +12,6 @@ name: Create and publish a Docker image
 on:
   push:
     branches: ['main']
-env:
-  
-  REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}
   
 jobs:
   build-and-push-image:
@@ -24,6 +20,8 @@ jobs:
     permissions:
       contents: read
       packages: write
+    env:
+      Greeting: Hello
     
     steps:
       - name: READ vaialbe test
@@ -31,13 +29,17 @@ jobs:
           echo '$read_my_name'
           echo ${{ env.read_my_name}}
           echo ${{ env.READ_MY_NAME }}
+          echo $READ_MY_NAME
+          echo $Greeting
+          
+          
       - name: Checkout repository
         uses: actions/checkout@v3
 
       - name: Log in to the Container registry
         uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
         with:
-          registry: ${{ env.REGISTRY }}
+          registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
