--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,7 @@ jobs:
           echo ${{ env.READ_MY_NAME }}
           echo $READ_MY_NAME
           echo $Greeting
+          echo ${{ vars.READ_MY_NAME }}
           
           
       - name: Checkout repository
