--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,7 +47,7 @@ jobs:
 
       - uses: mr-smithers-excellent/docker-build-push@v6
         with:
-          image: suyuying/fastapi-backend
+          image: fastapi-backend
           registry: ghcr.io
           username: ${{ secrets.GHCR_USERNAME }}
           password: ${{ secrets.GHCR_TOKEN }}
