--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,10 +9,15 @@
 
 name: Create and publish a Docker image
 
+env:
+  AZURE_WEBAPP_NAME: ford-amd   # set this to your application's name
 on:
   push:
     branches: ['main']
-  
+permissions:
+  contents: 'read'
+  packages: 'write'
+
 jobs:
   build-and-push-image:
     environment: 
@@ -45,17 +50,43 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-
-      - uses: mr-smithers-excellent/docker-build-push@v6
+      - name: Build and push container image to registry
+        uses: docker/build-push-action@v2
         with:
-          image: fastapi-backend
-          registry: ghcr.io
-          username: ${{ secrets.GHCR_USERNAME }}
-          password: ${{ secrets.GHCR_TOKEN }}
-  prod-check:
-    if: ${{ github.ref == 'refs/heads/main' }}
+          push: true
+          tags: ghcr.io/${{ env.REPO }}:${{ github.sha }}
+          file: ./Dockerfile
+#      - uses: mr-smithers-excellent/docker-build-push@v6
+#        with:
+#          image: fastapi-backend
+#          registry: ghcr.io
+#          username: ${{ secrets.GHCR_USERNAME }}
+#          password: ${{ secrets.GHCR_TOKEN }}
+#          tag_with_sha: true
+  deploy:
     runs-on: ubuntu-latest
+
+    needs: build
+
+    environment:
+      name: prod
+      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+
     steps:
-      - run: echo "Deploying to production server on branch $GITHUB_REF"
+      - name: Lowercase the repo name
+        run: echo "REPO=${GITHUB_REPOSITORY,,}" >>${GITHUB_ENV}
+
+      - name: Deploy to Azure Web App
+        id: deploy-to-webapp
+        uses: azure/webapps-deploy@0b651ed7546ecfc75024011f76944cb9b381ef1e
+        with:
+          app-name: ${{ env.AZURE_WEBAPP_NAME }}
+          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+          images: 'ghcr.io/${{ env.REPO }}:${{ github.sha }}'
+#  prod-check:
+#    if: ${{ github.ref == 'refs/heads/main' }}
+#    runs-on: ubuntu-latest
+#    steps:
+#      - run: echo "Deploying to production server on branch $GITHUB_REF"
 
 
