--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ permissions:
   packages: 'write'
 
 jobs:
-  build-and-push-image:
+  build:
     environment: 
       name: prod
     runs-on: ubuntu-latest
