--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,7 +66,7 @@ jobs:
           password: ${{ secrets.GHCR_TOKEN }}
           tag: ${{ github.sha }},latest
           multiPlatform: true
-          platform: linux/amd64,linux/arm64,linux/arm/v7
+          platform: linux/amd64,linux/arm/v7
   deploy:
     runs-on: ubuntu-latest
 
