--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -64,8 +64,9 @@ jobs:
           registry: ghcr.io
           username: ${{ secrets.GHCR_USERNAME }}
           password: ${{ secrets.GHCR_TOKEN }}
-          tag: ${{ github.sha }},latest
+          tags: ${{ github.sha }},latest
           multiPlatform: true
+#          arm64 build跑超久 先取消
           platform: linux/amd64,linux/arm/v7
   deploy:
     runs-on: ubuntu-latest
