--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,22 +52,23 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Lowercase the repo name
         run: echo "REPO=${GITHUB_REPOSITORY,,}" >>${GITHUB_ENV}
-#      - name: Build and push container image to registry
-#        uses: docker/build-push-action@v2
-#        with:
-#          push: true
-#          tags: ghcr.io/${{ env.REPO }}:${{ github.sha }}
-#          file: ./Dockerfile
-      - uses: mr-smithers-excellent/docker-build-push@v6
+      - name: Build and push container image to registry
+        uses: docker/build-push-action@v4
         with:
-          image: ${{ env.REPO }}
-          registry: ghcr.io
-          username: ${{ secrets.GHCR_USERNAME }}
-          password: ${{ secrets.GHCR_TOKEN }}
-          tags: ${{ github.sha }},latest
-          multiPlatform: true
-#          arm64 build跑超久 先取消
-          platform: linux/amd64,linux/arm/v7
+          push: true
+          platforms: linux/amd64,linux/arm64
+          tags: ghcr.io/${{ env.REPO }}:${{ github.sha }}
+          file: ./Dockerfile
+#      - uses: mr-smithers-excellent/docker-build-push@v6
+#        with:
+#          image: ${{ env.REPO }}
+#          registry: ghcr.io
+#          username: ${{ secrets.GHCR_USERNAME }}
+#          password: ${{ secrets.GHCR_TOKEN }}
+#          tags: ${{ github.sha }},latest
+#          multiPlatform: true
+##          arm64 build跑超久 先取消
+#          platform: linux/amd64,linux/arm/v7
   deploy:
     runs-on: ubuntu-latest
 
