--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,9 +43,15 @@ jobs:
           
       - name: Checkout repository
         uses: actions/checkout@v3
+      - name: 'Create env file'
+        run: |
+          touch sql_app/.env
+          echo API_ENDPOINT="https://xxx.execute-api.us-west-2.amazonaws.com" >> sql_app/.env
+          echo API_KEY=${{ secrets.API_KEY }} >> sql_app/.env
+          cat sql_app/.env
       - name: checko rep
         run: |
-          ls *
+          ls -a sql_app/
 #      - name: Set up QEMU
 #        uses: docker/setup-qemu-action@v2
 #      - name: Set up Docker Buildx
