--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,6 +49,7 @@ jobs:
           echo API_ENDPOINT="https://xxx.execute-api.us-west-2.amazonaws.com" >> sql_app/.env
           echo API_KEY=${{ secrets.API_KEY }} >> sql_app/.env
           echo "${{ secrets.ENV_FILE }}" > sql_app/.env
+          echo "${{ vars.TEST }}"
       - name: checko rep
         run: |
           ls -a sql_app/
