--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,10 +53,10 @@ jobs:
       - name: checko rep
         run: |
           ls -a sql_app/
-#      - name: Set up QEMU
-#        uses: docker/setup-qemu-action@v2
-#      - name: Set up Docker Buildx
-#        uses: docker/setup-buildx-action@v2
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
       - name: Log in to the Container registry
         uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
@@ -71,7 +71,7 @@ jobs:
         with:
           push: true
           context: .
-#          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64,linux/arm64
           tags: ghcr.io/${{ env.REPO }}:${{ github.sha }}
           file: ./Dockerfile
 #      - uses: mr-smithers-excellent/docker-build-push@v6
@@ -84,30 +84,30 @@ jobs:
 #          multiPlatform: true
 ##          arm64 build跑超久 先取消
 #          platform: linux/amd64,linux/arm/v7
-#  deploy:
-#    runs-on: ubuntu-latest
-#
-#    needs: build
-#
-#    environment:
-#      name: prod
-#      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-#
-#    steps:
-#      - name: Lowercase the repo name
-#        run: echo "REPO=${GITHUB_REPOSITORY,,}" >>${GITHUB_ENV}
-#
-#      - name: Deploy to Azure Web App
-#        id: deploy-to-webapp
-#        uses: azure/webapps-deploy@0b651ed7546ecfc75024011f76944cb9b381ef1e
-#        with:
-#          app-name: ${{ env.AZURE_WEBAPP_NAME }}
-#          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-#          images: 'ghcr.io/${{ env.REPO }}:${{ github.sha }}'
-#  prod-check:
-#    if: ${{ github.ref == 'refs/heads/main' }}
-#    runs-on: ubuntu-latest
-#    steps:
-#      - run: echo "Deploying to production server on branch $GITHUB_REF"
+  deploy:
+    runs-on: ubuntu-latest
+
+    needs: build
+
+    environment:
+      name: prod
+      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+
+    steps:
+      - name: Lowercase the repo name
+        run: echo "REPO=${GITHUB_REPOSITORY,,}" >>${GITHUB_ENV}
+
+      - name: Deploy to Azure Web App
+        id: deploy-to-webapp
+        uses: azure/webapps-deploy@0b651ed7546ecfc75024011f76944cb9b381ef1e
+        with:
+          app-name: ${{ env.AZURE_WEBAPP_NAME }}
+          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+          images: 'ghcr.io/${{ env.REPO }}:${{ github.sha }}'
+  prod-check:
+    if: ${{ github.ref == 'refs/heads/main' }}
+    runs-on: ubuntu-latest
+    steps:
+      - run: echo "Deploying to production server on branch $GITHUB_REF"
 
 
