--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,7 @@ jobs:
       - name: 'Create env file'
         run: |
           touch sql_app/.env
-          echo "${{ secrets.ENV_FILE }}" > sql_app/.env
+          echo ${{ secrets.ENV_FILE }} > sql_app/.env
           echo ${{ vars.TEST }}
       - name: checko rep
         run: |
